@@ -1,3 +1,4 @@
+.\" vim: tw=75
 .TH svps 1
 .SH NAME
 svps \- prints the status of all services started by \fBsvscan\fR
@@ -112,6 +113,11 @@ Send TERM signal to svscan
 .B \-\-logs or -l
 
 Print status for log processes
+
+.TP
+.B \-\-days or -d
+
+Print uptime/downtime in days, hours, minutes and seconds.
 
 .TP
 .B \-\-no-pager or -n
