@@ -1,6 +1,16 @@
 # 
-# $Id: svps.in,v 1.17 2023-07-26 22:16:10+05:30 Cprogrammer Exp mbhangui $
+# $Id: svps.in,v 1.18 2023-08-13 09:31:08+05:30 Cprogrammer Exp mbhangui $
 #
+
+do_days()
+{
+	secs=$1
+	if [ $mday -eq 1 ] ; then
+		tstr=$(printf '%2d days, %02d hrs, %02d mins, %02d secs\n' $((secs/86400)) $((secs%86400/3600)) $((secs%3600/60)) $((secs%60)))
+	else
+		tstr=$(printf '%7d secs' $secs)
+	fi
+}
 
 doit()
 {
@@ -15,12 +25,13 @@ words=$(ps ax|head -1|wc -w)
 words=$(expr $words - 1)
 
 echo "------------ svscan ---------------"
+do_days $diff
 ps ax|grep "sbin/svscan"|grep -Ev "grep|multilog|supervise" | while read line
 do
 	set $line
 	pid=$1
 	shift $words
-	printf "%-"$max"s up   %7d secs  pid %7d\n" "$*" $diff $pid
+	printf "%-"$max"s up   %s  pid %7d\n" "$*" "$tstr" $pid
 done
 
 case "$option" in
@@ -32,10 +43,12 @@ case "$option" in
 	do
 		set $line
 		name=`echo $1|cut -d: -f1`
+		secs=$3
+		do_days $secs
 		if [ "$5" = "normally" ] ; then
-			printf "%-"$max"s down %7d secs spid %7d\n" $name $3 $8
+			printf "%-"$max"s down %s spid %7d\n" $name "$tstr" $8
 		else
-			printf "%-"$max"s down %7d secs spid %7d\n" $name $3 $6
+			printf "%-"$max"s down %s spid %7d\n" $name "$tstr" $6
 		fi
 		if [ $? -ne 0 ] ; then
 			break
@@ -46,10 +59,12 @@ case "$option" in
 	do
 		set $line
 		name=`echo $1|cut -d: -f1`
+		secs=$3
+		do_days $secs
 		if [ $# -eq 9 ] ; then
-			printf "%-"$max"s wait %7d secs  pid %7d remaining %7d seconds\n" $name $3 $6 $8
+			printf "%-"$max"s wait %s  pid %7d remaining %7d seconds\n" $name "$tstr" $6 $8
 		else
-			printf "%-"$max"s wait %7d secs  pid %7d\n" $name $3 $6
+			printf "%-"$max"s wait %s  pid %7d\n" $name "$tstr" $6
 		fi
 		if [ $? -ne 0 ] ; then
 			break
@@ -60,10 +75,12 @@ case "$option" in
 	do
 		set $line
 		name=`echo $1|cut -d: -f1`
+		secs=$3
+		do_days $secs
 		if [ "$5" = "normally" ] ; then
-			printf "%-"$max"s up   %7d secs  pid %7d\n" $name $3 $8
+			printf "%-"$max"s up   %s  pid %7d\n" $name "$tstr" $8
 		else
-			printf "%-"$max"s up   %7d secs  pid %7d\n" $name $3 $6
+			printf "%-"$max"s up   %s  pid %7d\n" $name "$tstr" $6
 		fi
 		if [ $? -ne 0 ] ; then
 			break
@@ -75,16 +92,21 @@ esac
 case "$option" in
 	all|logs)
 	echo
-	echo "------------ logs -----------------"
-
-	set `grep "@servicedir@/\.svscan/log" /tmp/svps.$$`
+	echo "------------ .svscan/log ----------"
+	set $(grep "@servicedir@/\.svscan/log" /tmp/svps.$$)
 	name=`echo $1|cut -d: -f1`
-	printf "%-"$max"s up   %7d secs  pid %7d\n" $name $3 $6
+	secs=$3
+	do_days $secs
+	printf "%-"$max"s up   %s  pid %7d\n" $name "$tstr" $6
+	echo
+	echo "------------ logs -----------------"
 	grep -E "@servicedir@/.*/log" /tmp/svps.$$ | sort -n -k3 | grep -v "\.svscan" | while read line
 	do
 		set $line
 		name=`echo $1|cut -d: -f1`
-		printf "%-"$max"s up   %7d secs  pid %7d\n" $name $3 $6
+		secs=$3
+		do_days $secs
+		printf "%-"$max"s up   %s  pid %7d\n" $name "$tstr" $6
 		if [ $? -ne 0 ] ; then
 			break
 		fi
@@ -119,12 +141,15 @@ case "$option" in
 esac
 }
 
-if [ -x /usr/bin/less ] ; then
-	PAGER=/usr/bin/less
-elif [ -x /usr/bin/more ] ; then
-	PAGER=/usr/bin/more
+if [ -z "$PAGER" ] ; then
+	if [ -x /usr/bin/less ] ; then
+		PAGER=/usr/bin/less
+	elif [ -x /usr/bin/more ] ; then
+		PAGER=/usr/bin/more
+	fi
 fi
 option=main
+mday=0
 while test $# -gt 0; do
     case "$1" in
     -*=*) optarg=`echo "$1" | sed 's/[-_a-zA-Z0-9]*=//'`
@@ -152,9 +177,12 @@ while test $# -gt 0; do
     -n|--no-pager)
 	PAGER=""
     ;;
+	-d|--days)
+	mday=1
+	;;
     *)
     echo "invalid option [$1]" 1>&2
-	echo "usage: svps [-a|--all | -m|--main | -h|--hup | -t|--term | -n|--no-pager | -l|--logs]" 1>&2
+	echo "usage: svps [-a|--all | -m|--main | -h|--hup | -t|--term | -n|--no-pager | -d|--days | -l|--logs]" 1>&2
     read key
 	exit 1
     ;;
@@ -233,6 +261,9 @@ fi
 /bin/rm -f /tmp/svps.$$
 #
 # $Log: svps.in,v $
+# Revision 1.18  2023-08-13 09:31:08+05:30  Cprogrammer
+# added option to display up/down time in days, hours, mins, secs
+#
 # Revision 1.17  2023-07-26 22:16:10+05:30  Cprogrammer
 # display svscan not running if svscan is not up
 #
