@@ -19,6 +19,8 @@ Release @version@-@release@ Start 27/04/2023 End XX/XX/XXXX
 - 26/07/2023
 08. svps.in: display svscan not running if svscan is not up
 09. docker_entrypoint.sh: use start_apache2 for openSUSE tumbleweed
+- 13/08/2023
+10. svps: added option to display up/down time in days, hours, mins, secs
 
 * Sun Apr 23 2023 17:05:00 +0000 Manvendra Bhangui <daemontools@indimail.org> 1.1.2-1.1%{?dist}
 Release 1.1.2-1.1 Start 20/02/2023 End 23/04/2023
